onboarding/force-app/main/default/objects/Onboarding_Document__c/Onboarding_Document__c.object-meta.xml
<CustomObject>
    <label>Onboarding Document</label>
    <nameField>
        <label>Onboarding Document Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Onboarding Documents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>