onboarding/force-app/main/default/objects/Onboarding_Document__c/fields/Approving_Manager__c.field-meta.xml
<CustomField>
    <fullName>Approving_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approving Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Onboarding_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>