onboarding/force-app/main/default/objects/Onboarding_Document__c/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <label>Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ID Proof</fullName>
                <default>true</default>
                <label>ID Proof</label>
            </value>
            <value>
                <fullName>Address Proof</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Offer Letter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>