onboarding/force-app/main/default/objects/Onboarding_Document__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>Employee__c</columns>
    <columns>NAME</columns>
    <columns>Document_Type__c</columns>
    <columns>Status__c</columns>
    <columns>File_Url__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>